--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,13 @@
 <script src="lib/angular/angular.js"></script>
     <script src="lib/jquery/dist/jquery.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="lib/angular-cookies/angular-cookies.js"></script>
     <script src="app.js"></script>
-<script src="Route/route.js"></script>
+    <script src="Services/user.js"></script>
+    <script src="init/init.js"></script>
+    <script src="Route/route.js"></script>
     <script src="controller/todoTaskController.js"></script>
+    <script src="controller/userModal.js"></script>
 </body>
 </html>
